# pythonCtypesSpeedTest

./: .gitignore  CMakeLists.txt  README.md
include/: interface.h
src/: Logger.cpp  Logger.h  Manager.cpp  Manager.h  Worker.cpp  Worker.h  interface.cpp
test/: main.c  main.py
